# pyretries

./: .gitignore  404.html  README.md  codecov.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
docs/: exception.md  index.md  retry.md  strategies.md
examples/: retry_decorator.py  sleep.py  stop_after_attempt.py
exception/: index.html
pyretries/: __init__.py  retry.py  strategy.py
retries/: __init__.py  exceptions.py  retry.py  stop.py  strategy.py
retry/: index.html
strategies/: index.html
tests/: __init__.py  conftest.py  test_retry.py  test_strategy.py
